--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,70 @@
-apturl==0.5.2
-argcomplete==0.8.1
-beautifulsoup4==4.4.1
-blinker==1.3
-Brlapi==0.6.4
-chardet==2.3.0
-checkbox-support==0.22
-command-not-found==0.3
-cryptography==1.2.3
-defer==1.0.6
-Django==2.0.3
-django-filter==1.1.0
-djangorestframework==3.7.7
-feedparser==5.1.3
-guacamole==0.9.2
-html5lib==0.999
-httplib2==0.9.1
-idna==2.0
-Jinja2==2.8
-language-selector==0.1
-louis==2.6.4
-lxml==3.5.0
-Mako==1.0.3
-Markdown==2.6.11
-MarkupSafe==0.23
-mysqlclient==1.3.12
-oauthlib==1.0.3
-onboard==1.2.0
-padme==1.1.1
-pexpect==4.0.1
-plainbox==0.25
-progressbar==2.3
-ptyprocess==0.5
-pyasn1==0.1.9
-pycups==1.9.73
-pycurl==7.43.0
-pygobject==3.20.0
-PyJWT==1.3.0
-pyparsing==2.0.3
-python-apt==1.1.0b1
-python-debian==0.1.27
-python-gnupg==0.3.8
-python-systemd==231
-pytz==2018.3
-pyxdg==0.25
-PyYAML==3.11
-reportlab==3.3.0
-requests==2.9.1
-sessioninstaller==0.0.0
+amqp==2.2.2
+apns2==0.3.0
+asn1crypto==0.23.0
+astroid==1.5.3
+autopep8==1.3.2
+billiard==3.5.0.3
+celery==4.1.0
+Cerberus==1.1
+certifi==2017.7.27.1
+cffi==1.11.2
+chardet==3.0.4
+colorama==0.3.9
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==4.4.1
+cryptography==2.1.3
+Django==1.11.4
+django-anymail==0.11.1
+django-cors-headers==2.1.0
+django-enum-field==0.2
+django-extensions==1.8.1
+django-filter==1.0.4
+django-mysql==2.1.0
+django-push-notifications==1.5.0
+django-rest-swagger==2.1.2
+djangorestframework==3.6.3
+h2==2.6.2
+hpack==3.0.0
+httplib2==0.10.3
+hyper==0.7.0
+hyperframe==3.2.0
+idna==2.5
+isort==4.2.15
+itypes==1.1.0
+lazy-object-proxy==1.3.1
+Markdown==2.6.8
+MarkupSafe==1.0
+mccabe==0.6.1
+mock==2.0.0
+mysqlclient==1.3.10
+olefile==0.44
+openapi-codec==1.3.2
+pbr==3.1.1
+psycopg2==2.7.3
+py==1.4.34
+pycodestyle==2.3.1
+pycparser==2.18
+PyJWT==1.5.3
+pylint==1.7.2
+pylint-django==0.7.2
+pylint-plugin-utils==0.2.6
+PyPDF2==1.26.0
+PySocks==1.6.7
+pytest==3.2.1
+pytest-cov==2.5.1
+pytest-runner==2.12
+python-enumeration==0.1
+pytz==2017.2
+redis==2.10.6
+reportlab==3.4.0
+requests==2.18.3
+simplejson==3.11.1
 six==1.10.0
-sqlparse==0.1.18
-system-service==0.3
-ubuntu-drivers-common==0.0.0
-Ubuntu-Make==17.3
-ufw==0.35
-urllib3==1.13.1
-usb-creator==0.3.0
-virtualenv==15.1.0
-xdiagnose==3.8.4.1
-xkit==0.0.0
-XlsxWriter==0.7.3
+twilio==6.6.1
+uritemplate==3.0.0
+urllib3==1.22
+vine==1.1.4
+webencodings==0.5.1
+wrapt==1.10.11
+xhtml2pdf==0.2b1
